[metadata]
name = certminder
description_file = README.md
home_page = https://github.com/informatyzacja-sspwr-projekty/CertMinder
author = Komisja ds. Informatyzacji Samorządu Studenckiego PWr
author_email = informatyzacja@samorzad.pwr.edu.pl
maintainer = Komisja ds. Informatyzacji Samorządu Studenckiego PWr
maintainer_email = informatyzacja@samorzad.pwr.edu.pl
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    certminder

[entry_points]
console_scripts =
    certminder = certminder.cli:main

[package_data]
certminder =
    certminder/templates/*

[egg_info]
egg_base = .

[bdist_wheel]
universal = 1

[pbr]
warnerrors = true
